--- a/src/main/resources/com/tfg/dashboard_tfg/view/DashboardView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/DashboardView.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.paint.Stop?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.tfg.dashboard_tfg.viewmodel.DashboardController">
+            fx:controller="com.tfg.dashboard_tfg.viewmodel.DashboardController"
+            prefHeight="700.0">
 
     <VBox spacing="20.0"
           AnchorPane.bottomAnchor="20.0"
