--- a/src/main/resources/com/tfg/dashboard_tfg/view/RegisterView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/RegisterView.fxml
@@ -12,10 +12,14 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.tfg.dashboard_tfg.viewmodel.RegisterViewModel"
-            prefHeight="500.0" prefWidth="600.0">
-    <VBox alignment="CENTER" layoutX="250.0" layoutY="100.0" prefHeight="500.0" prefWidth="300.0" spacing="10.0"
-          styleClass="register-container" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="250.0"
+            fx:controller="com.tfg.dashboard_tfg.viewmodel.RegisterViewModel">
+    <VBox alignment="CENTER"
+          layoutX="250.0"
+          layoutY="100.0"
+          spacing="10.0"
+          styleClass="register-container"
+          AnchorPane.leftAnchor="250.0"
+          AnchorPane.rightAnchor="250.0"
           AnchorPane.topAnchor="50.0">
         <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
@@ -65,15 +69,15 @@
                 <Button fx:id="registerButton" defaultButton="true" mnemonicParsing="false"
                         onAction="#handleRegister" prefWidth="120.0" styleClass="register-button" text="Register"
                         style="-fx-background-color: #28a745; -fx-text-fill: white;"/>
-<!--                <Button fx:id="backToLoginButton" cancelButton="true" mnemonicParsing="false"-->
-<!--                        onAction="#backToLogin" prefWidth="120.0" styleClass="back-button" text="Back to Login"-->
-<!--                        style="-fx-background-color: #dc3545; -fx-text-fill: white;"/>-->
+                <!--                <Button fx:id="backToLoginButton" cancelButton="true" mnemonicParsing="false"-->
+                <!--                        onAction="#backToLogin" prefWidth="120.0" styleClass="back-button" text="Back to Login"-->
+                <!--                        style="-fx-background-color: #dc3545; -fx-text-fill: white;"/>-->
             </HBox>
             <ProgressIndicator fx:id="registerProgress" prefHeight="25.0" prefWidth="25.0" visible="false"/>
 
             <HBox alignment="CENTER" spacing="10.0">
-                <Label text="Already have an account?" />
-                <Hyperlink fx:id="loginLink" onAction="#backToLogin" text="Login" />
+                <Label text="Already have an account?"/>
+                <Hyperlink fx:id="loginLink" onAction="#backToLogin" text="Login"/>
             </HBox>
 
         </VBox>
