--- a/src/main/resources/com/tfg/dashboard_tfg/view/jellyFinView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/jellyFinView.fxml
@@ -8,8 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.tfg.dashboard_tfg.viewmodel.JellyFinViewModel"
-            prefHeight="400.0" prefWidth="600.0">
+            fx:controller="com.tfg.dashboard_tfg.viewmodel.JellyFinViewModel">
 
     <VBox spacing="20.0"
           AnchorPane.bottomAnchor="20.0"
