--- a/src/main/resources/com/tfg/dashboard_tfg/view/loginView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/loginView.fxml
@@ -11,10 +11,14 @@
 <?import javafx.geometry.Insets?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.tfg.dashboard_tfg.viewmodel.LoginViewModel"
-            prefHeight="400.0" prefWidth="600.0">
-    <VBox alignment="CENTER" layoutX="250.0" layoutY="100.0" prefHeight="400.0" prefWidth="300.0" spacing="10.0"
-          styleClass="login-container" AnchorPane.leftAnchor="250.0" AnchorPane.rightAnchor="250.0"
+            fx:controller="com.tfg.dashboard_tfg.viewmodel.LoginViewModel">
+    <VBox alignment="CENTER"
+          layoutX="250.0"
+          layoutY="100.0"
+          spacing="10.0"
+          styleClass="login-container"
+          AnchorPane.leftAnchor="250.0"
+          AnchorPane.rightAnchor="250.0"
           AnchorPane.topAnchor="100.0">
         <padding>
             <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
